--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -26,3 +26,5 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
+    - name: Make gradlew executable
+      run: chmod +x ./gradlew
